tests/baselines/reference/generatorTypeCheck56.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck56.ts(2,19): error TS9003: 'class' expressions are not currently supported.
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck56.ts(3,11): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck56.ts (2 errors) ====
    function* g() {
        var x = class C {
                      ~
!!! error TS9003: 'class' expressions are not currently supported.
            *[yield 0]() {
              ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
                yield 0;
            }
        };
    }